# metrotrack

./: .env.example  .gitignore  .lighthouserc.json  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  hiring-weekly.yml  nightly.yml
.playwright-mcp/: page-2026-06-28T05-55-28-632Z.yml  page-2026-06-28T05-55-58-313Z.yml  page-2026-06-28T05-57-24-206Z.yml  page-2026-06-28T06-01-23-987Z.yml  page-2026-06-28T06-02-34-044Z.yml  page-2026-06-28T06-05-42-708Z.yml  page-2026-06-28T06-05-57-199Z.yml  page-2026-06-28T06-06-08-437Z.yml  page-2026-06-28T06-06-17-468Z.yml
data/bronze/: manifest.json
db/: schema.sql
db/migrations/: 20260627120000_v1_0_2_foundation_spine.sql  20260627130000_v1_0_2_harden_rls_auto_enable.sql  20260627140000_v1_1_4_hex_metrics.sql  20260627150000_v1_2_4_agency_finances.sql  20260627160000_v1_3_4_vacancy_postings.sql  20260627170000_v1_4_4_hex_access.sql  20260627180000_v2_0_1_metros.sql  20260627190000_v2_0_2_metro_id_backfill.sql  20260702130000_v3_10_tod.sql  (+1 more)
design/: README.md  metrotrack-logos.dc.html
docs/: DEFINITION_OF_DONE.md  README.md  TOOLING.md  VERSIONING.md  WORKFLOW.md
frontend/: astro.config.mjs  package-lock.json  package.json
metros/: _schema.md  chicago.toml
pipeline/: __init__.py  access.py  bronze.py  census.py  checks.py  cli.py  delays.py  demographics_export.py  funding.py  funding_export.py  gtfs.py  hiring.py  hiring_export.py  live.py  load.py  metros.py  ridership.py  ridership_export.py  selftest.py  stop_pairs_export.py  tiles.py  tod.py  tod_export.py
transform/: dbt_project.yml  profiles.yml
(+205 files in other folders)
